tests/baselines/reference/jsNegativeElementAccessNotBound(strict=true).errors.txt
jsNegativeELementAccessNotBound.js(2,1): error TS7053: Element implicitly has an 'any' type because expression of type '-1' can't be used to index type '{}'.
  Property '-1' does not exist on type '{}'.


==== jsNegativeELementAccessNotBound.js (1 errors) ====
    var indexMap = {};
    indexMap[-1] = 0;
    ~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '-1' can't be used to index type '{}'.
!!! error TS7053:   Property '-1' does not exist on type '{}'.
    